--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ textarea:focus {
 	}
 	
 button {
-	color: #37805E;
+	color: #fafbfa;
 	}
 	
 footer p:before, 
@@ -180,9 +180,6 @@ nav h1 {
 	font-family: "Sorts Mill Goudy",serif;
 	font-size: 0.75em;
 	position: relative;
-	top: -40px;
-	left: 40%;
-	float: left;
 	letter-spacing: 2px;
 	}
 	
@@ -191,8 +188,9 @@ nav h1 {
 	}
 	
 nav ul {
+	position: relative;
 	padding: 0;
-	width: 45%;
+	width: 100%;
 	}
 	
 nav li {
@@ -200,9 +198,11 @@ nav li {
 	}
 	
 #logo-wrap {
-	overflow: hidden;
 	width: 100%;
-	height: 200px;
+	}
+	
+img.index-img {
+	position: relative;
 	}
 
 /* ---------------------------------
@@ -298,6 +298,7 @@ button {
 	}
 	
 button {
+	background: #37805E;
 	padding: 5% 41.4% 5%;
 	margin-top: 15px;
 	-webkit-transition: background-color 0.3s ease-in;
@@ -308,8 +309,8 @@ button {
 button:hover,
 button:active,
 section > a:hover {
-	color: #fafbfa;
-	background: #37805E;
+	background: #fafbfa;
+	color: #37805E;
 	}
 
 button,
@@ -325,7 +326,7 @@ section > a {
 .nav-line {
 	width: 96%;
 	border-bottom: 1px solid #9a9b9a;
-	display: block;
+	display: none;
 	margin: 0 auto;
 	clear: both;
 	position: relative;
@@ -344,10 +345,11 @@ section > a {
 		float: initial;
 		position: initial;
 		}
-	.index-img {
+	/*.index-img {
 		margin-right: 0;
-		}
+		} */
 	.nav-line {
+		display: block;
 		top: -104px;
 		}
 	}
@@ -358,15 +360,15 @@ section > a {
 		left: 44%;
 		top: -46px;
 		}
-	.index-img {
+	/*.index-img {
 		margin-right: 12%;
-		}
+		} */
 	}
 
 @media only screen and (min-width: 600px) {
-	.index-img {
+	/*.index-img {
 		margin-right: 24%;
-		}
+		} */
 	}
 	
 @media only screen and (min-width: 768px) {
@@ -395,6 +397,10 @@ img.about-img {
 	height: 300px;
 	width: 300px;
 	}
+
+img.index-img {
+	left: 5%;
+	}
 	
 nav > a > h1 {
 	font-size: 2em;
@@ -403,26 +409,27 @@ nav > a > h1 {
 nav li {
 	display: inline-block;
 	margin-left: 12%;
-	padding: 9% 0;
+	padding: 11.2% 0;
 	}
 	
 nav ul {
 	float: right;
-	width: 45%;
+	width: 50%;
 	}
 	
 nav h1 {
 	margin: 0;
 	float: left;
 	position: relative;
-	top: 91px;
-	left: -299px;
+	top: -49px;
+	left: 134px;
 	font-size: 1.2em;
 	}
 
 .nav-line {
 	top: -15px;
 	}
+
 
 .content-section,
 div.index-wrap > section {
@@ -433,32 +440,24 @@ div.index-wrap > section {
 
 @media only screen and (min-width: 1000px) {
 	
+nav {
+	max-height: 100%;
+	}
+	
 nav li:last-child {
 	margin-right: 20%;
 	}
-	
-img.index-img {
-	margin-left: 5%;
-	}
-	
-nav li {
-	padding: 11.2% 0;
-	}
-.nav-line {
-	top: -38px;
-	}
 
 nav h1 {
-	left: -360px;
+	left: 35px;
 	}
+
 }
 
 @media only screen and (min-width: 1200px) {
-.nav-line {
-		top: -57px;
-		}
+		
 nav h1 {
-	left: -400px;
+	left: 40px;
 	}
 }
 	
