Update to footer and mobile nav styles
Reduced the padding on the footer, raised the nav-line span element to
above the menu list elements.

--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,10 @@ button {
 	transition: background-color 0.3s ease-in;
 	}
 
+form,
+section {
+	padding: 20px 20px 5px;
+	}
 	
 /* ================================================================= 
 						  Page Styles 
@@ -183,7 +187,8 @@ nav > ul > li {
 	
 .nav-line {
 	border: .5px solid #555;
-	width: 50%;
+	width: 80%;
+	top: -100px;
 	}
 	
 /* Body */
@@ -198,12 +203,12 @@ nav > ul > li {
 	
 /* Footer */
 footer {
-	height: 100px;
+	height: 74px;
 	border-top: 1px solid #999;
 	}
 	
 footer > p {
-	padding: 5%;
+	padding: 2%;
 	}
 
 footer p:before,
@@ -222,7 +227,6 @@ footer p:after {
 	
 form {
 	width: 300px;
-	padding: 20px 20px 5px;
 	box-sizing: border-box;
 	background: hsla(120, 5%, 30%, 0.5);
 	top: 3%;
