--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,8 @@ footer {
 	background: #fafbfa;
 	}
 
-html {
+html,
+button {
 	color: white;
 	}
 	
@@ -264,6 +265,15 @@ input[type^="text"],
 textarea,
 button {
 	width: 95%;
+	}
+	
+input[type^="text"],
+textarea {
+	font-size: 1.1em;
+	}
+	
+input[type^="text"] {
+	height: 22px;
 	}
 	
 @media only screen and (min-width: 768px) {
