added inputCheck() function which determines the current input field in focus. Added wrapping divs to input fields so that the appended div is placed directly after the </br> tag in the contact form.

--- a/css/style.css
+++ b/css/style.css
@@ -284,6 +284,9 @@ input[type^="text"] {
 	position: relative;
 	padding: 5px;
 	}
+#contact-form p {
+	padding: 0;
+}
 
 @media only screen and (min-width: 768px) {
 
