--- a/css/style.css
+++ b/css/style.css
@@ -18,354 +18,68 @@ increases. */
 
 
 /* ------------------  Global Elements   -----------------------------  */
+* {
+	margin: 0;
+	padding: 0;
+}
+html, body {
+	height: 100%;
+}
 
-html,
-section {
+html, body, footer {
 	width: 100%;
-	}
+}
 
 body {
-	max-width: 1440px;
-	font-family: 'Lato', sans-serif;
+	font-family: "Lato", Helvetica, sans-serif;
 	font-size: 18px;
-	}
+}
 
-a,
-#logo-wrap > a > img,
-label,
-input,
-textarea,
-button,
-span {
-	display: block;
-	}
-
-section,
-form,
-input,
-textarea,
 .center,
 .nav-line,
-#logo-wrap,
-#logo-wrap > a > img {
+#logo-wrap {
 	margin: 0 auto;
 	}
-
-h1,
-footer > p,
-ul {
-	text-align: center;
-	}
-
-nav {
-	height: inherit;
-	}
-
-body,
-h1,
-p,
-ul,
-form > h1 {
-	margin: 0;
-	}
-
-ul {
-	padding: 0;
-	}
-
-a {
-	text-decoration: none;
-	}
-
-footer p:before,
-footer p:after {
-	display: inline-block;
-	}
-
-section,
-form,
-.nav-line,
-#logo-wrap > a > img {
-	position: relative;
-	}
-
-section {
-	width: 95%;
-	max-width: 500px;
-	background: hsla(120, 5%, 30%, 0.5);
-	top: 3%;
-	height: 375px;
-	}
-
-h1,
-h2,
-h3,
-label {
-	padding: 2%;
-	}
-
-p {
-	padding: 3%;
-	}
-
-a,
-button {
-	-webkit-transition: background-color 0.3s ease-in;
-	-moz-transition: background-color 0.3s ease-in;
-	transition: background-color 0.3s ease-in;
-	}
-
-form,
-section {
-	padding: 1.1em 1.1em;
-	}
-
-/* =================================================================
-						  Page Styles
-   ================================================================= */
-
-/* --------------------   Colors  ---------------------------------- */
-
-html,
-header,
-footer {
-	background: #fafbfa;
-	}
-
-html,
-button {
-	color: white;
-	}
-
-nav h1,
-footer p,
-.active,
-a:hover {
-	color: #377F5E;
-	}
-
-a {
-	color: #555;
-	}
-
-/* --------------------   Header Section  -------------------------- */
-
-header {
-	height: 320px;
-	border-bottom: 1px solid #999;
-	}
-
-#logo-wrap {
-	width: 320px;
-	}
-
-#logo-wrap > a > img {
-	height: 150px;
-	z-index: 2;
-	}
-
-nav h1 {
-	font-family: 'Sorts Mill Goudy', serif;
-	text-transform: uppercase;
-	font-size: 1.5em;
-	letter-spacing: 1px;
-	}
-
-nav > ul {
-	margin-top: 18px;
-	}
-
-nav > ul > li {
-	padding: 5px;
-	}
-
-.nav-line {
-	border: 1px solid #333;
-	width: 80%;
-	top: -100px;
-	}
-
-#logo-wrap > a {
-  height: 100%;
+/* ------------------  Header Elements -------------------------------  */
+header#globalHeader {
+	height: 3em;
+	/* adding in these declarations to help see dividers while developing.*/
+	border-bottom: 2px solid #444;
+	overflow: hidden;
 }
 
-/* Body */
+div#logo-wrap, header#globalHeader > nav {
+	height: inherit;
+	width: 49%;
+}
 
-.wrap-bg {
-	background: url('../img/banner-header.jpg');
-	background-size: cover;
+div#logo-wrap, header#globalHeader > nav, figure#headerIcon, div#logo-wrap h1 {
+	display: inline-block;
+}
+
+div#logo-wrap, figure#headerIcon, div#logo-wrap h1 {
+	float: left;
+}
+
+figure#headerIcon {
+	background-image: url("../img/logo_grey.png");
 	background-repeat: no-repeat;
-	background-position: center;
-	padding: 3.5em;
-	}
+	background-size: contain;
+}
 
-/* Footer */
+.logo {
+	height: 100%;
+	width: 3em;
+}
+
+
+/* ------------------  Content Elements ------------------------------  */
+/* ------------------  Footer Elements -------------------------------  */
 footer {
-	height: 74px;
-	border-top: 1px solid #999;
-	}
-
-footer > p {
-	padding: 2%;
-	}
-
-footer p:before,
-footer p:after {
-	content: "";
-	height: 7px;
-	width: 7px;
-	background: #377F5E;
-	border-radius: 50%;
-	margin: 2px 10px;
-	}
-
-/* -----------------------------------------------------------
-					Contact Page
-	---------------------------------------------------------- */
-
-form {
-	width: 300px;
-	box-sizing: border-box;
-	background: hsla(120, 5%, 30%, 0.5);
-	top: 3%;
+	position: absolute;
+	bottom: 0;
 }
 
-textarea,
-button {
-	border: none;
-	}
-
-button {
-	height: 50px;
-	margin: 1.2em auto;
-	background: #377F5E;
-	}
-
-button:hover {
-	color: #377F5E;
-	background: #fafbfa;
-	cursor: pointer;
-	}
-
-button,
-button:hover,
-button:active {
-	border: 1px solid #0C5935;
-	}
-
-label,
-button {
-	font-size: 1.25em;
-	}
-
-input[type^="text"],
-textarea,
-button {
-	width: 95%;
-	}
-
-input[type^="text"],
-textarea {
-	font-size: 1.1em;
-	color: black;
-	}
-
-input[type^="text"] {
-	height: 22px;
-	}
-.confirm {
-	display: block;
-	background: black;
-	color: white;
-	float: left;
-	position: relative;
-	padding: 5px;
-	}
-#contact-form p {
-	padding: 0;
-}
-
-@media only screen and (min-width: 768px) {
-
-form {
-	width: 400px;
-	}
-
-button {
-	height: 40px;
-	}
-
-header {
-	height: 150px;
-	}
-
-#logo-wrap {
-	margin: 0;
-	float:left;
-	width: 50%;
-	}
-
-#logo-wrap > a > img {
-	float: left;
-	}
-
-nav > ul,
-#logo-wrap {
-	height: inherit;
-	}
-
-nav > ul {
-	float: right;
-	width: 45%;
-	text-align: right;
-	margin-top: 0;
-	}
-
-nav > ul > li,
-nav h1 {
-	display: inline-block;
-	}
-
-nav > ul > li {
-	padding-top: 100px;
-	padding-right: 10%;
-	font-size: 1.4em;
-	}
-
-nav h1 {
-	padding: 100px 0 0 0;
-	margin-left: -25px;
-	font-size: 22px;
-	}
-
-.nav-line {
-	width: 98%;
-	top: 132px;
-	z-index: 1;
-	}
-
-	}
-
-@media only screen and (min-width: 1000px) {
-.wrap-bg {
-	background-position: 0px -150px;
-	}
-}
-
-@media only screen and (min-width: 1100px) {
-.wrap-bg {
-	background-position: 0px -215px;
-	}
-}
-
-@media only screen and (min-width: 1100px) {
-.wrap-bg {
-	background-position: 0px -215px;
-	}
-}
-
-@media only screen and (min-width: 1280px) {
-.wrap-bg {
-	background-position: 0px -300px;
-	}
+footer p {
+	text-align: center;
 }
